docs: update JavaFX documentation